--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,19 @@
 GOOGLE_GENERATIVE_AI_API_KEY=
+
 E2B_API_KEY=
+
 KV_URL=
 KV_REST_API_URL=
 KV_REST_API_TOKEN=
 KV_REST_API_READ_ONLY_TOKEN=
+
 UPLOADTHING_SECRET=
 UPLOADTHING_APP_ID=
 UPLOADTHING_TOKEN=
+
+# Google OAuth for YouTube
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REFRESH_TOKEN=
+# Optional: public | unlisted | private
+YOUTUBE_PRIVACY_STATUS=public
