--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@uploadthing/react": "^7.3.3",
+    "@vercel/kv": "^1.0.1",
     "ai": "^5.0.25",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^129.0.0",
     "inngest": "^3.40.3",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
@@ -39,8 +42,7 @@
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.4",
     "use-stick-to-bottom": "^1.1.1",
-    "zod": "^4.1.3",
-    "@vercel/kv": "^1.0.1"
+    "zod": "^4.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
