--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
+    "global": "^4.4.0",
     "google-auth-library": "^9.15.1",
     "googleapis": "^129.0.0",
     "inngest": "^3.40.3",
+    "inngest-cli": "latest",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
