better quality with grok

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ GOOGLE_CLIENT_SECRET=
 GOOGLE_REFRESH_TOKEN=
 # Optional: public | unlisted | private
 YOUTUBE_PRIVACY_STATUS=public
+
+OPENROUTER_API_KEY=
