--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@ai-sdk/react": "^2.0.25",
     "@e2b/code-interpreter": "^2.0.0",
     "@e2b/sdk": "^2.1.3",
+    "@openrouter/ai-sdk-provider": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-select": "^2.2.6",
