--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "lint:fix": "next lint --fix",
-    "preview": "next build && next start",
-    "check": "next lint && tsc --noEmit"
+"preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+"deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+"cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
+"check": "next lint && tsc --noEmit"
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.11",
@@ -20,6 +22,7 @@
     "@ai-sdk/react": "^2.0.25",
     "@e2b/code-interpreter": "^2.0.0",
     "@e2b/sdk": "^2.1.3",
+    "@opennextjs/cloudflare": "^1.9.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-select": "^2.2.6",
@@ -56,7 +59,8 @@
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.7",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^4.42.0"
   },
   "packageManager": "pnpm@10.13.1"
 }
