--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,6 @@ GOOGLE_CLIENT_SECRET=
 GOOGLE_REFRESH_TOKEN=
 # Optional: public | unlisted | private
 YOUTUBE_PRIVACY_STATUS=public
+
+USE_ELEVEN_LABS=true # not for prod
+ELEVENLABS_API_KEY=
