change models + use groq

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 GOOGLE_GENERATIVE_AI_API_KEY_1=
 GOOGLE_GENERATIVE_AI_API_KEY_2=
 GOOGLE_GENERATIVE_AI_API_KEY_3=
+GROQ_API_KEY=
 
 E2B_API_KEY=
 
@@ -19,6 +20,3 @@ GOOGLE_CLIENT_SECRET=
 GOOGLE_REFRESH_TOKEN=
 # Optional: public | unlisted | private
 YOUTUBE_PRIVACY_STATUS=public
-
-USE_ELEVEN_LABS=true # not for prod
-ELEVENLABS_API_KEY=
