--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.11",
+    "@ai-sdk/groq": "^2.0.24",
     "@ai-sdk/openai": "^2.0.22",
     "@ai-sdk/react": "^2.0.25",
     "@e2b/code-interpreter": "^2.0.0",
