--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 GOOGLE_GENERATIVE_AI_API_KEY_1=
 GOOGLE_GENERATIVE_AI_API_KEY_2=
 GOOGLE_GENERATIVE_AI_API_KEY_3=
+GOOGLE_GENERATIVE_AI_API_KEY_4=
+GOOGLE_GENERATIVE_AI_API_KEY_5=
 GROQ_API_KEY=
 
 E2B_API_KEY=
