--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,5 @@ GOOGLE_CLIENT_SECRET=
 GOOGLE_REFRESH_TOKEN=
 # Optional: public | unlisted | private
 YOUTUBE_PRIVACY_STATUS=public
+
+DATABASE_URL=postgresql://
