--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-syntax-highlighter": "^15.6.6",
     "streamdown": "^1.1.4",
     "tailwind-merge": "^3.3.1",
+    "twitter-api-v2": "^1.28.0",
     "uploadthing": "^7.7.4",
     "use-stick-to-bottom": "^1.1.1",
     "zod": "^4.1.3"
