better-auth + convex setup 1

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ai-sdk/groq": "^2.0.24",
     "@ai-sdk/openai": "^2.0.22",
     "@ai-sdk/react": "^2.0.25",
+    "@convex-dev/better-auth": "^0.9.7",
     "@e2b/code-interpreter": "^2.0.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
@@ -30,8 +31,10 @@
     "@vercel/kv": "^1.0.1",
     "@vercel/speed-insights": "^1.2.0",
     "ai": "^5.0.25",
+    "better-auth": "^1.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.29.3",
     "dotenv": "^17.2.1",
     "e2b": "^2.6.0",
     "global": "^4.4.0",
