--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
-    "check": "next lint && tsc --noEmit"
+    "check": "eslint && tsc --noEmit"
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.11",
@@ -34,11 +34,13 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "e2b": "^2.6.0",
+    "franc": "^6.2.0",
     "global": "^4.4.0",
     "google-auth-library": "^9.15.1",
     "googleapis": "^129.0.0",
     "inngest": "^3.40.3",
     "inngest-cli": "latest",
+    "langs": "^2.0.0",
     "lucide-react": "^0.542.0",
     "next": "16.0.7",
     "react": "19.1.0",
