--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "check": "eslint && tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/cerebras": "^2.0.5",
     "@ai-sdk/google": "^3.0.2",
     "@ai-sdk/groq": "^3.0.2",
     "@ai-sdk/openai": "^3.0.2",
