vercel + upstash automation bypass

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,5 @@ QSTASH_NEXT_SIGNING_KEY=
 
 # Optional: Override base URL for workflow triggers (defaults to VERCEL_URL or localhost:3000)
 UPSTASH_WORKFLOW_URL=
+
+VERCEL_AUTOMATION_BYPASS_SECRET=
