--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ai-sdk/openai": "^3.0.2",
     "@ai-sdk/react": "^3.0.5",
     "@e2b/code-interpreter": "^2.0.0",
+    "@posthog/ai": "^7.4.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-progress": "^1.1.7",
@@ -42,7 +43,9 @@
     "googleapis": "^129.0.0",
     "langs": "^2.0.0",
     "lucide-react": "^0.542.0",
-    "next": "16.0.7",
+    "next": "^16.1.2",
+    "posthog-js": "^1.321.2",
+    "posthog-node": "^5.21.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-syntax-highlighter": "^15.6.6",
