--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,10 @@ QSTASH_URL=
 QSTASH_CURRENT_SIGNING_KEY=
 QSTASH_NEXT_SIGNING_KEY=
 
+# Upstash Vector (RAG)
+UPSTASH_VECTOR_REST_URL=
+UPSTASH_VECTOR_REST_TOKEN=
+
 # Optional: Override base URL for workflow triggers (defaults to VERCEL_URL or localhost:3000)
 UPSTASH_WORKFLOW_URL=
 
