--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
-    "check": "eslint && tsc --noEmit"
+    "check": "eslint && tsc --noEmit",
+    "rag:index": "bun run scripts/index-rag.ts",
+    "rag:reset": "bun run scripts/index-rag.ts --reset"
   },
   "dependencies": {
     "@ai-sdk/cerebras": "^2.0.5",
@@ -28,6 +30,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@uploadthing/react": "^7.3.3",
+    "@upstash/vector": "^1.2.2",
     "@upstash/workflow": "^0.2.23",
     "@vercel/analytics": "^1.5.0",
     "@vercel/kv": "^1.0.1",
@@ -69,5 +72,5 @@
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   },
-  "packageManager": "pnpm@10.13.1"
+  "packageManager": "bun@1.0.30"
 }
