--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "concurrently \"next dev --turbopack\" \"pnpx @upstash/qstash-cli dev\"",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
@@ -13,8 +13,8 @@
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
     "check": "eslint && tsc --noEmit",
-    "rag:index": "bun run scripts/index-rag.ts",
-    "rag:reset": "bun run scripts/index-rag.ts --reset"
+    "rag:index": "bun ./scripts/index-rag.ts",
+    "rag:reset": "bun ./scripts/index-rag.ts --reset"
   },
   "dependencies": {
     "@ai-sdk/cerebras": "^2.0.5",
@@ -65,6 +65,7 @@
     "@types/node": "^25.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^9.2.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
