remove hallucinated diagrams and add agents and llm files

--- a/.env.example
+++ b/.env.example
@@ -33,7 +33,7 @@ QSTASH_NEXT_SIGNING_KEY=
 UPSTASH_VECTOR_REST_URL=
 UPSTASH_VECTOR_REST_TOKEN=
 
-# Optional: Override base URL for workflow triggers (defaults to VERCEL_URL or localhost:3000)
-UPSTASH_WORKFLOW_URL=
+# Posthog Analytics
+NEXT_PUBLIC_POSTHOG_KEY=
+NEXT_PUBLIC_POSTHOG_HOST=
 
-VERCEL_AUTOMATION_BYPASS_SECRET=
