--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,14 @@ UPSTASH_VECTOR_REST_URL=
 NEXT_PUBLIC_POSTHOG_HOST=
 NEXT_PUBLIC_POSTHOG_KEY=
 
+# Clerk Auth
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
+CLERK_FRONTEND_API_URL=
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/
+NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL=/
+
+# Deployment used by `npx convex dev`
+CONVEX_DEPLOYMENT=
+NEXT_PUBLIC_CONVEX_URL=
