--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"next dev --turbopack\" \"pnpx @upstash/qstash-cli dev\"",
+    "dev": "concurrently \"next dev --turbopack\" \"pnpx @upstash/qstash-cli dev\" \"convex dev\"",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
@@ -22,6 +22,7 @@
     "@ai-sdk/groq": "^3.0.2",
     "@ai-sdk/openai": "^3.0.2",
     "@ai-sdk/react": "^3.0.5",
+    "@clerk/nextjs": "^6.36.10",
     "@e2b/code-interpreter": "^2.0.0",
     "@posthog/ai": "^7.4.2",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -38,6 +39,7 @@
     "ai": "^6.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.31.6",
     "dotenv": "^17.2.1",
     "e2b": "^2.6.0",
     "franc": "^6.2.0",
