auth pages and themes complete

--- a/package.json
+++ b/package.json
@@ -22,14 +22,20 @@
     "@ai-sdk/groq": "^3.0.2",
     "@ai-sdk/openai": "^3.0.2",
     "@ai-sdk/react": "^3.0.5",
+    "@clerk/elements": "^0.24.6",
     "@clerk/nextjs": "^6.36.10",
+    "@clerk/themes": "^2.4.50",
     "@e2b/code-interpreter": "^2.0.0",
     "@posthog/ai": "^7.4.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@uploadthing/react": "^7.3.3",
     "@upstash/vector": "^1.2.2",
     "@upstash/workflow": "^0.2.23",
@@ -47,7 +53,7 @@
     "google-auth-library": "^9.15.1",
     "googleapis": "^129.0.0",
     "langs": "^2.0.0",
-    "lucide-react": "^0.542.0",
+    "lucide-react": "^0.563.0",
     "next": "^16.1.2",
     "posthog-js": "^1.321.2",
     "posthog-node": "^5.21.0",
