save generated videos in separate table

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"next dev --turbopack\" \"pnpx @upstash/qstash-cli dev\" \"convex dev\"",
+    "dev": "concurrently \"next dev --turbopack\" \"npx @upstash/qstash-cli dev\" \"convex dev\"",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
@@ -21,6 +21,7 @@
     "@ai-sdk/google": "^3.0.2",
     "@ai-sdk/groq": "^3.0.2",
     "@ai-sdk/openai": "^3.0.2",
+    "@ai-sdk/openai-compatible": "^2.0.22",
     "@ai-sdk/react": "^3.0.5",
     "@clerk/elements": "^0.24.6",
     "@clerk/nextjs": "^6.36.10",
@@ -83,6 +84,5 @@
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
-  },
-  "packageManager": "bun@1.0.30"
+  }
 }
