search for information

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ GOOGLE_GENERATIVE_AI_API_KEY_2=
 GOOGLE_GENERATIVE_AI_API_KEY_3=
 GROQ_API_KEY=
 
+# Tavily API for web search
+TAVILY_API_KEY=
+
 E2B_API_KEY=
 
 KV_URL=
