--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tavily/core": "^0.7.1",
     "@uploadthing/react": "^7.3.3",
     "@upstash/vector": "^1.2.2",
     "@upstash/workflow": "^0.2.23",
