--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,6 @@ NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL=/
 # Deployment used by `npx convex dev`
 CONVEX_DEPLOYMENT=
 NEXT_PUBLIC_CONVEX_URL=
+
+# Prevent convex timeouts
+NODE_OPTIONS='--network-family-autoselection-attempt-timeout=1000'
