--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"next dev --turbopack\" \"npx @upstash/qstash-cli dev\" \"convex dev\"",
+    "dev": "concurrently \" export NODE_OPTIONS=--network-family-autoselection-attempt-timeout=1000 \" \"next dev --turbopack\" \"npx @upstash/qstash-cli dev\" \"convex dev\"",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
